--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "expo": "~39.0.2",
     "expo-file-system": "~9.2.0",
     "expo-image-picker": "~9.1.1",
+    "expo-media-library": "~9.2.1",
     "expo-status-bar": "~1.0.2",
+    "moment": "^2.29.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
